feat: introduce conditional Content-Security-Policy based on request path, refactor HTML resource loading, and update ApiResponse error codes.