@@ -256,16 +256,13 @@ public ResponseEntity<String> resetPasswordPage(@RequestParam String token) {
         org.springframework.core.io.Resource resource = 
             new org.springframework.core.io.ClassPathResource("static/reset-password.html");
         
-        String htmlContent = new String(
-            java.nio.file.Files.readAllBytes(
-                java.nio.file.Paths.get(resource.getURI())
-            ),
-            java.nio.charset.StandardCharsets.UTF_8
-        );
+        String htmlContent;
+        try (java.io.InputStream inputStream = resource.getInputStream()) {
+            htmlContent = new String(inputStream.readAllBytes(), java.nio.charset.StandardCharsets.UTF_8);
+        }
         
         return ResponseEntity.ok()
                 .contentType(org.springframework.http.MediaType.TEXT_HTML)
-                .header("Content-Security-Policy", "default-src 'self' 'unsafe-inline' 'unsafe-eval' data:; connect-src 'self' http://35.208.197.159:9191;")
                 .body(htmlContent);
     } catch (Exception e) {
         log.error("Failed to load reset password page", e);
@@ -304,11 +301,11 @@ public ResponseEntity<String> resetPasswordPage(@RequestParam String token) {
             return ResponseEntity.ok(ApiResponse.success("Password reset successfully"));
         } catch (com.lifepill.user_auth.exception.InvalidTokenException e) {
             log.warn("Invalid token during password reset: {}", e.getMessage());
-            return ResponseEntity.badRequest().body(ApiResponse.error(400, e.getMessage()));
+            return ResponseEntity.badRequest().body(ApiResponse.error("400", e.getMessage()));
         } catch (Exception e) {
             log.error("Failed to reset password", e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(ApiResponse.error(500, "An unexpected error occurred: " + e.getMessage()));
+                    .body(ApiResponse.error("500", "An unexpected error occurred: " + e.getMessage()));
         }
     }
 
